# rules_cloudrun

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  base.yaml  defs.bzl  go.mod  go.sum  overlay.yaml
.aspect/rules/: lint.yaml
cloudrun/: BUILD.bazel  common.bzl  config.bzl  deploy.bzl  job.bzl  render.bzl  service.bzl  worker.bzl
cloudrun/private/: BUILD.bazel  assemble_command.sh  execute.sh  parse_env_vars.sh  parse_run_config.sh  parse_secrets.sh  parse_top_level_config.sh
cloudrun/private/resource/: BUILD.bazel  renderer.go  renderer_test.go
cloudrun/private/resource/cmd/: BUILD.bazel  main.go
cloudrun/private/validation/: BUILD.bazel  validate.sh
docs/: BUILD.bazel
docs/examples/: BUILD.bazel  apphosting.job.yaml  apphosting.worker.yaml  apphosting.yaml  config.dev.yaml  config.prod.yaml  config.staging.yaml  image.digest.txt  image_push.sh  test_multiregion.yaml
tests/: BUILD.bazel  network_config.yaml  utils.bzl  vpc_config.yaml
tests/fixtures/invalid/: BUILD.bazel  invalid_config.yaml
tests/fixtures/job/: BUILD.bazel  expected_digest_pinned.yaml
tests/fixtures/service/: expected_digest_pinned.yaml  expected_multi_env_dev.yaml  expected_multi_env_prd.yaml  expected_runtime_override_placeholder.yaml  expected_single_env.yaml
tests/fixtures/worker/: expected_digest_pinned.yaml
tools/: extensions.bzl
