load("//tests:utils.bzl", "cloudrun_command_test")
load("//:defs.bzl", "cloudrun_deploy")

cloudrun_deploy(
    name = "deploy_with_vpc",
    service_name = "vpc-service",
    config = ":vpc_config.yaml",
    region = "us-central1",
)

cloudrun_command_test(
    name = "test_vpc_config",
    target = ":deploy_with_vpc",
    expected_flags = [
        "--vpc-connector=lavndr-vpc-connector",
        "--vpc-egress=all-traffic",
    ],
)

cloudrun_deploy(
    name = "deploy_with_network",
    service_name = "network-service",
    config = ":network_config.yaml",
    region = "us-central1",
)

cloudrun_command_test(
    name = "test_network_config",
    target = ":deploy_with_network",
    expected_flags = [
        "--network=default",
        "--subnet=my-subnet",
        "--vpc-egress=private-ranges-only",
    ],
)

cloudrun_command_test(
    name = "test_simple_deploy",
    target = "//docs/examples:deploy_myapp",
    expected_flags = [
        "CMD+=\" deploy myapp\"",
        "--region=us-central1",
        "--allow-unauthenticated",
    ],
)

cloudrun_command_test(
    name = "test_prod_deploy",
    target = "//docs/examples:deploy_myapp_prod",
    expected_flags = [
        "--service-account=myapp-prod@my-project.iam.gserviceaccount.com",
        "--region=us-central1",
    ],
)

# Test generated multi-region individual target (NOW SINGLE TARGET)
# This was previously checking individual regions, but now we check the single command.
cloudrun_command_test(
    name = "test_multi_region_service",
    target = "//docs/examples:test_multi_region",
    expected_flags = [
        "CMD+=\" deploy test-multi-service\"",
        "--regions=us-central1,europe-west1,asia-east1",
        "--allow-unauthenticated",
    ],
    unexpected_flags = [
        "--region=", # Should not have single region flag
    ]
)

cloudrun_command_test(
    name = "test_job_single",
    target = "//docs/examples:test_job_single",
    expected_flags = [
        "CMD+=\" jobs deploy test-job\"",
        "--region=us-central1",
    ],
    unexpected_flags = [
        "--platform=managed",
    ],
)

# Test env_configs generation
cloudrun_command_test(
    name = "test_env_config_dev",
    target = "//docs/examples:deploy_myapp_all_dev",
    expected_flags = [
        "CMD+=\" deploy myapp\"",
        "--region=us-central1",
    ],
)

# Test multi-region with env configs
cloudrun_command_test(
    name = "test_multi_region_envs_dev",
    target = "//docs/examples:test_multi_region_envs_dev",
    expected_flags = [
        "CMD+=\" deploy test-env-multi-service\"",
        "--regions=us-central1,europe-west1",
    ],
)