load("//:defs.bzl", "cloudrun_service")
load("//tests:utils.bzl", "cloudrun_deploy_script_test", "cloudrun_manifest_test", "cloudrun_validation_test")

# ─── Golden file tests for cloudrun_service rule ─────────────────────────────

cloudrun_manifest_test(
    name = "test_service_single_env_manifest",
    expected = "//tests/fixtures/service:expected_single_env.yaml",
    render_target = "//docs/examples:example_service.render",
)

cloudrun_manifest_test(
    name = "test_service_multi_env_dev_manifest",
    expected = "//tests/fixtures/service:expected_multi_env_dev.yaml",
    render_target = "//docs/examples:example_multi_env_dev.render",
)

cloudrun_manifest_test(
    name = "test_service_multi_env_prd_manifest",
    expected = "//tests/fixtures/service:expected_multi_env_prd.yaml",
    render_target = "//docs/examples:example_multi_env_prd.render",
)

cloudrun_manifest_test(
    name = "test_service_digest_pinned_manifest",
    expected = "//tests/fixtures/service:expected_digest_pinned.yaml",
    render_target = "//docs/examples:example_digest_pinned_service.render",
)

cloudrun_manifest_test(
    name = "test_service_runtime_override_placeholder_manifest",
    expected = "//tests/fixtures/service:expected_runtime_override_placeholder.yaml",
    render_target = "//docs/examples:example_runtime_override_service.render",
)

cloudrun_manifest_test(
    name = "test_job_digest_pinned_manifest",
    expected = "//tests/fixtures/job:expected_digest_pinned.yaml",
    render_target = "//docs/examples:example_digest_pinned_job.render",
)

cloudrun_manifest_test(
    name = "test_worker_digest_pinned_manifest",
    expected = "//tests/fixtures/worker:expected_digest_pinned.yaml",
    render_target = "//docs/examples:example_digest_pinned_worker.render",
)

# ─── Deploy script tests ─────────────────────────────────────────────────────
# Verify the assembled deploy scripts contain the correct build-time constants,
# embedded manifest content, and gcloud command — with no runtime rlocation.

cloudrun_deploy_script_test(
    name = "test_service_deploy_script",
    deploy_target = "//docs/examples:example_service.deploy",
    expected_substrings = [
        'GCLOUD_TRACK=""',
        'GCLOUD_SUBCMD="services"',
        'RESOURCE_TYPE="service"',
        'SERVICE_NAME="myapp"',
        'REGION_FLAG="--region=us-central1"',
        'replace "$MANIFEST"',
        "exec gcloud",
        "CLOUDRUN_MANIFEST_EOF",
        "serving.knative.dev/v1",
    ],
    unexpected_substrings = [
        "rlocation",
        "runfiles.bash",
        "RUNFILES_DIR",
        "cloudrun_deployer",
        "bazel run",
    ],
)

cloudrun_deploy_script_test(
    name = "test_digest_pinned_deploy_script",
    deploy_target = "//docs/examples:example_digest_pinned_service.deploy",
    expected_substrings = [
        "PUSH_RUNFILE=",
        'GCLOUD_SUBCMD="services"',
        "exec gcloud",
        "us-central1-docker.pkg.dev/lavndr-ai/lavndr-ai/myapp@sha256:",
    ],
    unexpected_substrings = [
        "rlocation",
        "runfiles.bash",
        "cloudrun_deployer",
    ],
)

cloudrun_deploy_script_test(
    name = "test_runtime_override_deploy_script",
    deploy_target = "//docs/examples:example_runtime_override_service.deploy",
    expected_substrings = [
        'PUSH_RUNFILE=""',
        "rules-cloudrun.invalid/override-required:latest",
        "exec gcloud",
    ],
    unexpected_substrings = [
        "rlocation",
        "cloudrun_deployer",
    ],
)

cloudrun_deploy_script_test(
    name = "test_job_deploy_script",
    deploy_target = "//docs/examples:example_digest_pinned_job.deploy",
    expected_substrings = [
        'GCLOUD_TRACK=""',
        'GCLOUD_SUBCMD="jobs"',
        'RESOURCE_TYPE="job"',
        "run.googleapis.com/v1",
        "exec gcloud",
    ],
    unexpected_substrings = [
        "rlocation",
        "cloudrun_deployer",
    ],
)

cloudrun_deploy_script_test(
    name = "test_worker_deploy_script",
    deploy_target = "//docs/examples:example_digest_pinned_worker.deploy",
    expected_substrings = [
        'GCLOUD_TRACK="beta"',
        'GCLOUD_SUBCMD="worker-pools"',
        'RESOURCE_TYPE="worker"',
        "CLOUDSDK_RUN_REGION",
        'replace "$MANIFEST"',
        "gcloud components install",
        "exec gcloud",
    ],
    unexpected_substrings = [
        "rlocation",
        "cloudrun_deployer",
    ],
)

# ─── Validation failure tests ────────────────────────────────────────────────

cloudrun_validation_test(
    name = "test_validation_invalid_config",
    config = "//tests/fixtures/invalid:invalid_config.yaml",
    expected_errors = [
        "Unknown top-level key 'unknownKey'",
        "has both 'value' and 'secret'",
    ],
)

cloudrun_service(
    name = "example_empty_overlay",
    base_config = "//docs/examples:apphosting.yaml",
    config_format = "apphosting.*.yaml",
    configs = ["//tests/fixtures/service:apphosting.empty.yaml"],
    image = "gcr.io/my-project/myapp:latest",
    region = "us-central1",
    service_name = "myapp",
)

cloudrun_manifest_test(
    name = "test_service_empty_overlay_manifest",
    expected = "//tests/fixtures/service:expected_single_env.yaml",
    render_target = ":example_empty_overlay_empty.render",
)
