load("@rules_cloudrun//:defs.bzl", "cloudrun_deploy")

package(default_visibility = ["//visibility:public"])

# Export test configuration files
exports_files([
    "test_multiregion.yaml",
])

# Example 1: Simple deployment with a single config file
cloudrun_deploy(
    name = "deploy_myapp",
    service_name = "myapp",
    config = ":config.yaml",
    region = "us-central1",
    source = ".",
    additional_flags = ["--allow-unauthenticated"],
)

# Example 2: Deployment with base config and environment-specific config
cloudrun_deploy(
    name = "deploy_myapp_prod",
    service_name = "myapp",
    config = ":config.prod.yaml",
    base_config = ":config.yaml",
    region = "us-central1",
    source = ".",
    service_account = "myapp-prod@my-project.iam.gserviceaccount.com",
)

# Example 3: Multi-environment deployment using env_configs
cloudrun_deploy(
    name = "deploy_myapp_all",
    service_name = "myapp",
    base_config = ":config.yaml",
    env_configs = {
        "dev": ":config.dev.yaml",
        "staging": ":config.staging.yaml", 
        "prod": ":config.prod.yaml",
    },
    region = "us-central1",
    source = ".",
)

# Example 4: Deployment from container image
cloudrun_deploy(
    name = "deploy_myapp_image",
    service_name = "myapp",
    config = ":config.yaml",
    region = "us-central1",
    additional_flags = [
        "--image=gcr.io/my-project/myapp:latest",
        "--allow-unauthenticated",
    ],
)

# Test Examples for Multi-Region Feature

# Test 5: Single-region deployment (existing behavior validation)
cloudrun_deploy(
    name = "test_single_region",
    config = ":test_multiregion.yaml",
    service_name = "test-single-service",
    region = "us-central1",
    source = ".",
    additional_flags = ["--allow-unauthenticated"],
)

# Test 6: Multi-region deployment
cloudrun_deploy(
    name = "test_multi_region",
    config = ":test_multiregion.yaml",
    service_name = "test-multi-service",
    multi_region = True,
    regions = ["us-central1", "europe-west1", "asia-east1"],
    source = ".",
    additional_flags = ["--allow-unauthenticated"],
)

# Test 7: Multi-region deployment with env_configs
cloudrun_deploy(
    name = "test_multi_region_envs",
    base_config = ":config.yaml",
    env_configs = {
        "dev": ":config.dev.yaml",
        "prod": ":config.prod.yaml",
    },
    service_name = "test-env-multi-service",
    multi_region = True,
    regions = ["us-central1", "europe-west1"],
    source = ".",
    additional_flags = ["--allow-unauthenticated"],
)

# Test 8: Cloud Run job (single region)
cloudrun_deploy(
    name = "test_job_single",
    config = ":test_multiregion.yaml",
    service_name = "test-job",
    region = "us-central1",
    job = True,
    source = ".",
)

# Test 9: Cloud Run job (multi-region)
cloudrun_deploy(
    name = "test_job_multi",
    config = ":test_multiregion.yaml",
    service_name = "test-job-multi",
    multi_region = True,
    regions = ["us-central1", "europe-west1"],
    job = True,
    source = ".",
)
