load("@rules_cloudrun//:defs.bzl", "cloudrun_job", "cloudrun_service", "cloudrun_worker")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

sh_binary(
    name = "image.push",
    srcs = ["image_push.sh"],
)

filegroup(
    name = "image.digest",
    srcs = ["image.digest.txt"],
)

# Example: Single-env service (Knative manifest generation)
cloudrun_service(
    name = "example_service",
    config = ":apphosting.yaml",
    image = "gcr.io/my-project/myapp:latest",
    region = "us-central1",
    service_name = "myapp",
)

# Example: Multi-env service with auto-discovered environments
cloudrun_service(
    name = "example_multi_env",
    base_config = ":apphosting.yaml",
    config_format = "apphosting.*.yaml",
    configs = [
        ":apphosting.dev.yaml",
        ":apphosting.prd.yaml",
    ],
    image = "gcr.io/my-project/myapp:latest",
    project_id = "my-project-{}-00",
    region = "us-central1",
    service_name = "myapp",
)

cloudrun_service(
    name = "example_digest_pinned_service",
    config = ":apphosting.yaml",
    image_repo = "us-central1-docker.pkg.dev/lavndr-ai/lavndr-ai/myapp",
    region = "us-central1",
    service_name = "myapp",
)

cloudrun_service(
    name = "example_runtime_override_service",
    config = ":apphosting.yaml",
    region = "us-central1",
    service_name = "myapp",
)

cloudrun_job(
    name = "example_digest_pinned_job",
    config = ":apphosting.job.yaml",
    image_repo = "us-central1-docker.pkg.dev/lavndr-ai/lavndr-ai/myjob",
    job_name = "myjob",
    region = "us-central1",
)

cloudrun_worker(
    name = "example_digest_pinned_worker",
    config = ":apphosting.worker.yaml",
    image_repo = "us-central1-docker.pkg.dev/lavndr-ai/lavndr-ai/myworker",
    region = "us-central1",
    worker_name = "myworker",
)
