load("@rules_go//go:def.bzl", "go_binary", "go_library")

package(default_visibility = ["//cloudrun:__subpackages__"])

go_library(
    name = "resource_manifest_lib",
    srcs = ["main.go"],
    importpath = "github.com/justinswe/rules_cloudrun/cloudrun/private/resource/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//cloudrun/private/resource:resource_lib",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "resource_manifest",
    embed = [":resource_manifest_lib"],
    visibility = ["//visibility:public"],
)
